# btp-neural-nets-cpp

./: .CMakeLists.txt.swp  .ctags  .gitignore  CMakeLists.txt  README.md  gen_mac_test.py  notes.txt  tags
data/: data_fp.txt  data_fxp15.txt  data_fxp16.txt  data_fxp24.txt  data_fxp32.txt  data_fxp40.txt  data_fxp48.txt  data_fxp56.txt  plot.py
include/: fixed.h  my_defines.h  prettyprint.h
src/: MNIST.cpp  MNIST.h  TODO  main.cpp
src/activation_functions/: ActivationFunction.h  ReLU.cpp  ReLU.h  Sigmoid.cpp  Sigmoid.h  Softmax.cpp  Softmax.h
src/layers/: DenseLayer.cpp  DenseLayer.h  Layer.h  Linear.cpp  Linear.h  ReLU.cpp  ReLU.h  Sigmoid.cpp  Sigmoid.h  Softmax.cpp  Softmax.h
src/models/: .ANN.cpp.swp  ANN.cpp  ANN.h  Model.h
test/: test_mac.cpp  test_mac.h
